# whoami

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CODEOFCONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE  LICENSE_BSL.txt  LICENSE_MIT.txt  README.md  TESTING.md  WASM.md  changelog.md  code_of_conduct.md  contributing.md  contributors.md  countries.txt  languages.txt  main.c  output.txt  readme.md  rearanged_countries.txt  recipe.toml  rust-toolchain  tari.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
examples/: os-strings.rs  test.rs  wasm32.rs  whoami-demo.rs
examples/web/: Cargo.toml  README.md  index.html  rust-toolchain
examples/web-cala/: cala.muon
examples/web-cala/res/: label.muon
examples/web-cala/src/: web.rs
examples/web-stdweb/: Cargo.toml  Web.toml  runtime.js
examples/web-stdweb/src/: main.rs
examples/web-wasm-bindgen/: Cargo.toml  index.html
examples/web-wasm-bindgen/src/: lib.rs
examples/web/res/: name.txt
examples/web/res/web/: cala.wasm  index.html
examples/web/src/: lib.rs  main.rs
src/: api.rs  arch.rs  conversions.rs  desktop_env.rs  disp.rs  fake.rs  fallible.rs  lib.rs  linux.rs  main.rs  os.rs  platform.rs  unix.rs  wasm.rs  web.rs  windows.rs
src/os/: daku.rs  fake.rs  redox.rs  target.rs  unix.rs  wasi.rs  web.rs  windows.rs
src3/: lib.rs  linux.rs  main.rs
