# Copyright © 2017-2022 The WhoAmI Contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "whoami"
version = "1.3.0"
edition = "2018"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
documentation = "https://docs.rs/whoami"
homepage = "https://github.com/ardaku/whoami/blob/stable/CHANGELOG.md"
repository = "https://github.com/ardaku/whoami"
readme = "README.md"
description = "Retrieve the current user and environment."
keywords = ["user", "username", "whoami", "platform", "detect"]
categories = ["os", "wasm", "internationalization", "localization", "value-formatting"]
include = ["README.md", "src/*"]
rust-version = "1.40"

# Needed target-specific dependency to work with wasm-pack.
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["Navigator", "Document", "Window", "Location"]
[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"
[target.'cfg(target_arch = "wasm32")'.dependencies.bumpalo]
version = "3.0"

[features]
default = []
