[package]
name = "whoami"
version = "1.4.1"
edition = "2018"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
documentation = "https://docs.rs/whoami"
homepage = "https://github.com/ardaku/whoami/blob/stable/CHANGELOG.md"
repository = "https://github.com/ardaku/whoami"
readme = "README.md"
description = "Retrieve the current user and environment."
keywords = ["user", "username", "whoami", "platform", "detect"]
categories = [
    "os",
    "wasm",
    "internationalization",
    "localization",
    "value-formatting",
]
include = [
    "LICENSE_APACHE",
    "LICENSE_BOOST",
    "LICENSE_MIT",
    "README.md",
    "src/*",
]
rust-version = "1.40"

# Target-specific dependency required to work with wasm-bindgen
[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi"), not(target_os = "daku")))'.dependencies.web-sys]
version = "0.3"
features = ["Navigator", "Document", "Window", "Location"]
optional = true
[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi"), not(target_os = "daku")))'.dependencies.wasm-bindgen]
version = "0.2"
optional = true

[features]
default = ["web"]
# Enabling this feature indicates that the wasm32-unknown-unknown target should
# be assumed to be in a web environment where it can call DOM APIs.
web = ["web-sys", "wasm-bindgen"]

[dependencies]
is-terminal = "0.4.10"
