[package]
name = "web_whoami"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

[dependencies]
whoami = { path = "../../" }
cala_core = { path = "../../../cala_core", features = ["stdweb"] }
devout = { path = "../../../devout", features = ["dev"] } # "0.0.1"
