[package]
name = "web_whoami"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whoami = { path = "../../" }
wasm-bindgen = "0.2"
cala_core = { path = "../../../cala_core", features = ["wasm-bindgen"] }
devout = { path = "../../../devout", features = ["dev"] } # "0.0.1"
