[package]
name = "whoami_wasmbindgen"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whoami = { path = "../../", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
devout = { path = "../../../devout", features = ["dev"] } # "0.0.1"
