[package]
name = "whoami_web"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

# wasm-bindgen lets us export our main function to the javascript that runs the
# web assembly module.
[dependencies.wasm-bindgen]
version = "0.2"

# The `web-sys` crate lets us log in the web console.
[dependencies.web-sys]
version = "0.3"
features = ["console"]

# `whoami` - the crate we're testing!
[dependencies.whoami]
path = "../../"

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.
